Comment UI Ready

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,6 +56,14 @@
         </div>
       </div>
     </div>
+    <form>
+      <div class="input-comment">
+        <textarea rows="9" class="input-comment-section"></textarea>
+      </div>
+      <div>
+        <button type="button" class="submit-btn">Add Reply</button>
+      </div>
+    </form>
   </div>
 </div>
 
