--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -61,14 +61,24 @@
     }
   }
 
-  //.vl {
-  //  border-left: 1px solid #d3d3d3;
-  //  margin-left: -36px;
-  //}
-  .border-left {
-    border-left: 1px solid #D3D3D3;
+  .input-comment {
+    padding: 10px 0px;
   }
 
+  .input-comment-section {
+    width: 100%;
+    border: 1px solid #e2e1e1;
+    border-radius: 10px;
+  }
+  .submit-btn {
+    padding: 10px 39px;
+    border-radius: 5px;
+    background: #49d056;
+    border: 1px solid #49d056;
+    color: white;
+    font-size: 13px;
+    font-family: "Open Sans";
+  }
 }
 
 @media screen and (min-width: 200px) and (max-width: 767px) {
