--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
     <div *ngIf="comments_count > 0">
       <div class="new-comment" *ngFor="let comment of comments; let index = index">
         <div class="user-avatar">
-          <ngx-avatar facebookId="1508319875" src="https://s3.amazonaws.com/uifaces/faces/twitter/dancounsell/73.jpg"></ngx-avatar>
+          <ngx-avatar facebookId="1508319875"
+                      src="https://s3.amazonaws.com/uifaces/faces/twitter/dancounsell/73.jpg"></ngx-avatar>
         </div>
         <div class="details-box">
           <div style="display: flex; flex-direction: row;">
@@ -31,10 +32,12 @@
                 <span *ngIf="comment.initReply" (click)="onCloseReply(index)">Cancel</span>
               </p>
               <p class="comment-like">
-                Like
+                <img src="../assets/images/like.svg" class="like-class" alt="">
+                {{comment.likes}}
               </p>
               <p class="comment-dislike">
-                Dislike
+                <img src="../assets/images/dislike.svg" class="dislike-class" alt="">
+                {{comment.dislikes}}
               </p>
             </div>
             <app-add-comment *ngIf="comment.initReply" tenancy="reply" [commentId]="comment.id"></app-add-comment>
@@ -52,13 +55,20 @@
                       {{reply.datetime | timeFromNow}}
                     </p>
                   </div>
-                  <div class="action-buttons">
-                    <p class="comment-like">
-                      Like
+                  <div class="details-section">
+                    <p class="comment-description">
+                      {{reply.commentText}}
                     </p>
-                    <p class="comment-dislike">
-                      Dislike
-                    </p>
+                    <div class="action-buttons">
+                      <p class="comment-like">
+                        <img src="../assets/images/like.svg" class="like-class" alt="">
+                        {{reply.likes}}
+                      </p>
+                      <p class="comment-dislike">
+                        <img src="../assets/images/dislike.svg" class="dislike-class" alt="">
+                        {{reply.dislikes}}
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
