--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,6 +24,10 @@
     padding: 10px 0px;
   }
 
+  .user-avatar {
+    padding-right: 5px;
+
+  }
   .new-comment {
     display: flex;
     flex-direction: row;
@@ -41,17 +45,14 @@
         padding: 0px 5px 5px 0px;
         font-size: 15px;
       }
-
       .comment-time {
         color: #d3d3d3;
         font-size: 13px;
+        margin-top: 3px;
       }
     }
 
     .details-section {
-      //display: flex;
-      //flex-direction: column;
-
       .comment-description {
         padding: 0px 0px 8px 0px;
         font-size: 14px;
@@ -63,17 +64,17 @@
         cursor: pointer;
       }
 
-      .action-buttons p{
+      .action-buttons p {
         display: inline-flex;
         flex-direction: column;
-        margin-right: 5px;
+        margin-right: 10px;
       }
     }
 
     .replied-comments {
       padding: 10px 0px;
       border-left: 1px solid #d3d3d3;
-      margin-left: -30px;
+      //margin-left: -30px;
     }
   }
 
@@ -90,11 +91,31 @@
   .submit-btn {
     padding: 10px 39px;
     border-radius: 5px;
-    background: #49d056;
-    border: 1px solid #49d056;
+    background: #1587c1;
+    border: 1px solid #1587c1;
     color: white;
     font-size: 13px;
     font-family: "Open Sans";
+  }
+  .action-buttons{
+    display: flex;
+  }
+  .like-class {
+    width: 20px;
+    height: auto;
+    cursor: pointer;
+  }
+  .like-class:hover {
+    filter: invert(.5) sepia(1) saturate(5) hue-rotate(175deg);
+  }
+  .dislike-class {
+    width: 25px;
+    height: auto;
+    margin-top: 3px;
+    cursor: pointer;
+  }
+  .dislike-class:hover {
+    filter: invert(.8) sepia(150) saturate(6) hue-rotate(175deg);
   }
 }
 
