--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,7 @@
     <div *ngIf="comments_count > 0">
       <div class="new-comment" *ngFor="let comment of comments; let index = index">
         <div class="user-avatar">
-          <ngx-avatar facebookId="1508319875"
-                      src="https://s3.amazonaws.com/uifaces/faces/twitter/dancounsell/73.jpg"></ngx-avatar>
+          <ngx-avatar src="https://s3.amazonaws.com/uifaces/faces/twitter/dancounsell/73.jpg"></ngx-avatar>
         </div>
         <div class="details-box">
           <div style="display: flex; flex-direction: row;">
@@ -44,7 +43,7 @@
             <div *ngIf="comment.replies.length > 0" class="replied-comments">
               <div *ngFor="let reply of comment.replies; let replyIndex = index" style="padding-left: 30px;">
                 <div class="user-avatar">
-                  <ngx-avatar></ngx-avatar>
+                  <ngx-avatar src="https://www.gravatar.com/avatar/00000000000000000000000000000000?d=wavatar&f=y"></ngx-avatar>
                 </div>
                 <div class="details-box">
                   <div style="display: flex; flex-direction: row;">
